--- a/css/theme.css
+++ b/css/theme.css
@@ -11,119 +11,13 @@
   clear: both;
 }
 
-/* contact css */
-
-.page-title {
-  padding: 0;
-}
-
-.page-title .container {
-  position: relative;
-  transform: translate3d(0, -50%, 0);
-  -webkit-transform: translate3d(0, -50%, 0);
-  top: 50%;
-  z-index: 2;
-}
-
-.page-title-4 {
-  height: 240px;
-}
 
 .mb0 {
   margin-bottom: 0 !important;
 }
 
-.bg-secondaryc {
-  background: rgba(0, 0, 0, 0.219);
-}
-
 .bg-secondary {
   background: #f8f8f8 !important;
-}
-
-.image-square {
-  height: 50vw;
-  max-height: 640px;
-  overflow: hidden;
-  padding: 0;
-}
-
-.image-square .image, .image-square>.content {
-  position: absolute;
-}
-
-.image-square .image {
-  height: 100%;
-}
-
-.image-square>.content {
-  padding: 0 10%;
-  top: 50%;
-  transform: translate3d(0, -50%, 0);
-  -webkit-transform: translate3d(0, -50%, 0);
-  -moz-transform: translate3d(0, -50%, 0);
-}
-
-.image-square.left .image {
-  left: 0;
-}
-
-.image-square.left>.content {
-  right: 0;
-}
-
-.background-image-holder {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background-position: 50% 50% !important;
-  transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-}
-
-.background-image-holder img {
-  display: flex;
-}
-
-@media all and (max-width: 990px) {
-  .image-square {
-    height: auto;
-    max-height: 100000px;
-    padding-bottom: 48px;
-  }
-  .image-square .image, .image-square>.content {
-    position: relative;
-  }
-  .image-square .image {
-    height: 100vw;
-    margin-bottom: 48px;
-    max-height: 500px;
-  }
-  .image-square>.content {
-    padding: 0 10%;
-    top: 50%;
-    transform: none;
-    -webkit-transform: none;
-    padding-top: 15%;
-  }
-}
-
-@media all and (max-width: 766px) {
-  .image-square>.content {
-    padding: 0 10%;
-    top: 50%;
-    transform: none;
-    -webkit-transform: none;
-    padding-top: 15%;
-  }
-  .image-square {
-    width: 100%;
-    height: 450px;
-  }
 }
 
 .uppercase {
@@ -226,7 +120,7 @@ button[type="submit"] {
   color: #1c2331;
 }
 
-but:hover {
+.but:hover {
   background-color: #fff;
   color: #1c2331;
 }
@@ -560,13 +454,12 @@ section, footer {
 @media(max-width:766px) {
   .first-about {
     background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(194, 91, 91, 0)), url('5.0-About\ Us.jpg');
-
     height: 70vh;
   }
   .first-about h2 {
-    padding-top: 30%;
+    padding-top: 55%;
   }
-  .first-contact h2{
+  .first-contact h2 {
     visibility: hidden;
   }
 }
@@ -603,7 +496,7 @@ section, footer {
 
 @media all and (max-width:766px) {
   .bg-dark {
-    background-color: #24355c !important;
+    background-color: transparent !important;
   }
   .navbar-brand img {
     height: 40px;
@@ -833,9 +726,12 @@ h4.uppercase {
 }
 
 @media all and (max-width:766px) {
+  .carousel-caption h3,.carousel-caption h5{
+    font-size: 15px;
+  }
   .carousel-inner img {
     width: 100%;
-    height: 450px;
+    height: 350px;
   }
 }
 
