--- a/css/theme.css
+++ b/css/theme.css
@@ -11,7 +11,6 @@
   clear: both;
 }
 
-
 .mb0 {
   margin-bottom: 0 !important;
 }
@@ -468,6 +467,63 @@ section, footer {
 
 /* NAVIGATION */
 
+.navbar-toggler {
+  border: none;
+  background: transparent !important;
+}
+
+.navbar-toggler:focus {
+  outline: none;
+  background: transparent !important;
+}
+
+.navbar-toggler .icon-bar {
+  background-color: #fff;
+  transform: rotate(0deg) translate(0px, 0px);
+  transition: ease all .2s;
+}
+
+.navbar-toggler .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+}
+
+.navbar-toggler .icon-bar+.icon-bar {
+  margin-top: 4px;
+}
+
+.icon-bar:nth-child(2) {
+  width: 16px;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:hover>.icon-bar:nth-child(2) {
+  width: 22px;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:active>.icon-bar:nth-child(2) {
+  width: 22px;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:not(.collapsed) .icon-bar:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 4px);
+  transition: ease all .2s;
+}
+
+.navbar-toggler:not(.collapsed) .icon-bar:nth-child(2) {
+  opacity: 0;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:not(.collapsed) .icon-bar:nth-child(3) {
+  transform: rotate(-45deg) translate(4px, -4px);
+  transition: ease all .2s;
+}
+
 .nav-link {
   color: #fff !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -726,7 +782,7 @@ h4.uppercase {
 }
 
 @media all and (max-width:766px) {
-  .carousel-caption h3,.carousel-caption h5{
+  .carousel-caption h3, .carousel-caption h5 {
     font-size: 15px;
   }
   .carousel-inner img {
@@ -758,8 +814,3 @@ h1.large {
 }
 
 /* end of slider */
-
-.home-image {
-  width: 100%;
-  height: 70%;
-}
