--- a/css/theme.css
+++ b/css/theme.css
@@ -11,119 +11,12 @@
   clear: both;
 }
 
-/* contact css */
-
-.page-title {
-  padding: 0;
-}
-
-.page-title .container {
-  position: relative;
-  transform: translate3d(0, -50%, 0);
-  -webkit-transform: translate3d(0, -50%, 0);
-  top: 50%;
-  z-index: 2;
-}
-
-.page-title-4 {
-  height: 240px;
-}
-
 .mb0 {
   margin-bottom: 0 !important;
 }
 
-.bg-secondaryc {
-  background: rgba(0, 0, 0, 0.219);
-}
-
 .bg-secondary {
   background: #f8f8f8 !important;
-}
-
-.image-square {
-  height: 50vw;
-  max-height: 640px;
-  overflow: hidden;
-  padding: 0;
-}
-
-.image-square .image, .image-square>.content {
-  position: absolute;
-}
-
-.image-square .image {
-  height: 100%;
-}
-
-.image-square>.content {
-  padding: 0 10%;
-  top: 50%;
-  transform: translate3d(0, -50%, 0);
-  -webkit-transform: translate3d(0, -50%, 0);
-  -moz-transform: translate3d(0, -50%, 0);
-}
-
-.image-square.left .image {
-  left: 0;
-}
-
-.image-square.left>.content {
-  right: 0;
-}
-
-.background-image-holder {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background-position: 50% 50% !important;
-  transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-}
-
-.background-image-holder img {
-  display: flex;
-}
-
-@media all and (max-width: 990px) {
-  .image-square {
-    height: auto;
-    max-height: 100000px;
-    padding-bottom: 48px;
-  }
-  .image-square .image, .image-square>.content {
-    position: relative;
-  }
-  .image-square .image {
-    height: 100vw;
-    margin-bottom: 48px;
-    max-height: 500px;
-  }
-  .image-square>.content {
-    padding: 0 10%;
-    top: 50%;
-    transform: none;
-    -webkit-transform: none;
-    padding-top: 15%;
-  }
-}
-
-@media all and (max-width: 766px) {
-  .image-square>.content {
-    padding: 0 10%;
-    top: 50%;
-    transform: none;
-    -webkit-transform: none;
-    padding-top: 15%;
-  }
-  .image-square {
-    width: 100%;
-    height: 450px;
-  }
 }
 
 .uppercase {
@@ -225,7 +118,8 @@ button[type="submit"] {
   background: #fff;
   color: #1c2331;
 }
-but:hover{
+
+.but:hover {
   background-color: #fff;
   color: #1c2331;
 }
@@ -429,17 +323,19 @@ footer {
 .widget hr {
   margin-bottom: 12px;
 }
+
+.hr {
+  border: none;
+  border-top: 1px solid #fff;
+  margin: 0 0 24px 0;
+  margin-right: 20%;
+}
+
+@media all and (max-width:766px) {
   .hr {
-    border: none;
-    border-top: 1px solid #fff;
-    margin: 0 0 24px 0;
-    margin-right: 20%;
+    margin-left: 20%;
   }
-  @media all and (max-width:766px){
-    .hr{
-      margin-left: 20%;
-    }
-  }
+}
 
 .link-list {
   line-height: 32px;
@@ -506,7 +402,7 @@ section, footer {
 
 .first-about {
   /* image used */
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(194, 91, 91, 0)), url('about-us-vector.png');
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(194, 91, 91, 0)), url('5.0-About\ Us.jpg');
   padding-top: 140px;
   /* height used */
   min-height: 300px;
@@ -539,11 +435,12 @@ section, footer {
 }
 
 .first-contact {
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(194, 91, 91, 0)), url('contact.jpg');
   padding-top: 140px;
   /* height used */
   min-height: 300px;
   background-size: cover !important;
-  height: 50vh;
+  height: 70vh;
   /* create parallex scrolling effect */
   background-attachment: fixed;
   background-position: center;
@@ -554,18 +451,78 @@ section, footer {
 }
 
 @media(max-width:766px) {
-  .first {
-    height: 90vh;
-    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('hand.jpg');
-  }
   .first-about {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(194, 91, 91, 0)), url('5.0-About\ Us.jpg');
     height: 70vh;
+  }
+  .first-about h2 {
+    padding-top: 55%;
+  }
+  .first-contact h2 {
+    visibility: hidden;
   }
 }
 
 /* END OF IMAGE LAYERS */
 
 /* NAVIGATION */
+
+.navbar-toggler {
+  border: none;
+  background: transparent !important;
+}
+
+.navbar-toggler:focus {
+  outline: none;
+  background: transparent !important;
+}
+
+.navbar-toggler .icon-bar {
+  background-color: #fff;
+  transform: rotate(0deg) translate(0px, 0px);
+  transition: ease all .2s;
+}
+
+.navbar-toggler .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+}
+
+.navbar-toggler .icon-bar+.icon-bar {
+  margin-top: 4px;
+}
+
+.icon-bar:nth-child(2) {
+  width: 16px;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:hover>.icon-bar:nth-child(2) {
+  width: 22px;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:active>.icon-bar:nth-child(2) {
+  width: 22px;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:not(.collapsed) .icon-bar:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 4px);
+  transition: ease all .2s;
+}
+
+.navbar-toggler:not(.collapsed) .icon-bar:nth-child(2) {
+  opacity: 0;
+  transition: ease all .2s;
+}
+
+.navbar-toggler:not(.collapsed) .icon-bar:nth-child(3) {
+  transform: rotate(-45deg) translate(4px, -4px);
+  transition: ease all .2s;
+}
 
 .nav-link {
   color: #fff !important;
@@ -595,7 +552,7 @@ section, footer {
 
 @media all and (max-width:766px) {
   .bg-dark {
-    background-color: #24355c !important;
+    background-color: transparent !important;
   }
   .navbar-brand img {
     height: 40px;
@@ -800,8 +757,6 @@ h4.uppercase {
 
 /* slider */
 
-
-
 .carousel-indicators>li {
   border-radius: 12px;
   width: 12px;
@@ -827,9 +782,12 @@ h4.uppercase {
 }
 
 @media all and (max-width:766px) {
+  .carousel-caption h3, .carousel-caption h5 {
+    font-size: 15px;
+  }
   .carousel-inner img {
-    width: 100%;
-    height: 450px;
+    width: auto;
+    height: 350px;
   }
 }
 
@@ -856,8 +814,3 @@ h1.large {
 }
 
 /* end of slider */
-
-.home-image {
-  width: 100%;
-  height: 70%;
-}
